--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="wrapper">
         <img src="img/kozel-i-kot.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
     </div>
 </body>
 </html>
