--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div class="wrapper">
         <img src="img/kozel-i-kot.jpg" alt="">
-        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">'
+        <img src ="img/HBkC2hgUNKI.jpg" alt="">
     </div>
 </body>
 </html>
