--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="img/kozel-i-kot.jpg" alt="">
         <img src="img/xV2PuZ_odcM.jpg" alt="">'
         <img src ="img/HBkC2hgUNKI.jpg" alt="">
+        <img src ="img/Banana.png" alt="">
     </div>
 </body>
 </html>
