--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="wrapper">
         <img src="img/kozel-i-kot.jpg" alt="">
-        <img src="img/xV2PuZ_odcM.jpg" alt="">'
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
         <img src ="img/HBkC2hgUNKI.jpg" alt="">
         <img src ="img/Banana.png" alt="">
+        <img src ="https://i.pinimg.com/originals/72/fa/39/72fa39a8402abe4c6675cac8c07f219e.jpg" alt="">
     </div>
 </body>
 </html>
