--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="wrapper">
         <img src="img/kozel-i-kot.jpg" alt="">
+        <img src="1614550076_18-p-memi-na-belom-fone-19.jpg" alt="">
         <img src="img/xV2PuZ_odcM.jpg" alt="">'
         <img src ="img/HBkC2hgUNKI.jpg" alt="">
     </div>
