--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
 </head>
 <body>
     <div class="wrapper">
-        <img src="img/kozel-i-kot.jpg" alt="">
-        <img src="img/xV2PuZ_odcM.jpg" alt="">'
-        <img src ="img/HBkC2hgUNKI.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
+        <img src="img/xV2PuZ_odcM.jpg" alt="">
     </div>
 </body>
 </html>
