--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <img src ="img/HBkC2hgUNKI.jpg" alt="">
         <img src ="img/Banana.png" alt="">
         <img src ="https://i.pinimg.com/originals/72/fa/39/72fa39a8402abe4c6675cac8c07f219e.jpg" alt="">
+        <img src="https://pictures.s3.yandex.net/resources/Glavnaia_5_1_1697819397.png">
     </div>
 </body>
 </html>
