--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <img src="img/HBkC2hgUNKI.jpg" alt="">
         <img src="img/Banana.png" alt="">
         <img src="img\photo_2023-10-31_23-18-39.jpg" alt="">
+        <p>о нет... мой дом... все пропало...</p>
     </div>
 </body>
 
