--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/Banana.png" alt="">
 	<img src="img/og_og_1516713880222084140.jpg" alt="mem about JS" width="600" height="300">
 	<img src="1614550076_18-p-memi-na-belom-fone-19.jpg" alt="">
-	    
+	    БББББББББББББББББ
     </div>
 </body>
 </html>
