Главная страница с одним мемом

--- a/mems/memCard.html
+++ b/mems/memCard.html
@@ -12,9 +12,9 @@
 	</header>
 	<main class="main">
 		<a href="./memCard.html">
-			<article class="card">
-				<img src="./img/ironMan.jpg" alt="mem" class="card__img">
-				<p class="card__about">Радуга делает людей веселее</p>
+			<article class="card-full">
+				<img src="./img/ironMan.jpg" alt="mem" class="card-full__img">
+				<p class="card-full__about">Радуга делает людей веселее</p>
 			</article>
 		</a>
 	</main>
