--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 			<a href="./mems/html/memCard.html">
 				<article class="card">
 					<img src="./mems/img/ironMan.jpg" alt="mem" class="card__img">
-					<p class="card__about">Радуга делает людей веселее</p>
+					<p class="card__about">Всё, что веселое, веселее</p>
 				</article>
 			</a>
 			<a href="./mems/html/memCard.html">
 				<article class="card">
 					<img src="./mems/img/ironMan.jpg" alt="mem" class="card__img">
-					<p class="card__about">Радуга делает людей веселее</p>
+					<p class="card__about">Всё, что веселое, веселее</p>
 				</article>
 			</a>
 			<a href="./mems/html/memCard.html">
 				<article class="card">
 					<img src="./mems/img/ironMan.jpg" alt="mem" class="card__img">
-					<p class="card__about">Радуга делает людей веселее</p>
+					<p class="card__about">Всё, что веселое, веселее</p>
 				</article>
 			</a>
 		</section>
