--- a/mems/html/memCard.html
+++ b/mems/html/memCard.html
@@ -14,7 +14,7 @@
       <section class="card-container">
         <article class="card-full">
           <img src="../img/ironMan.jpg" alt="mem" class="card-full__img" />
-          <p class="card-full__about">Радуга делает людей веселее</p>
+          <p class="card-full__about">Всё, что веселое, веселее</p>
           <section class="card-full__info card-info">
             <h2 class="card-info__title">Основано на меме «null»</h2>
             <section class="card-info__content">
