--- a/mems/index.html
+++ b/mems/index.html
@@ -12,12 +12,14 @@
             <p>МЕМЫ И ТОЧКА.</p>
         </div>
         <div class="container__cards">
-            <div class="card">
-                <img src="./src/meme__img.png" alt="">
-                <div class="card__text">
-                    <p>Дамы и господа, я не могу сделать хедер</p>
+            <a href="./mem-1.html">
+                <div class="card">
+                    <img src="./src/meme__img.png" alt="">
+                    <div class="card__text">
+                        <p>Дамы и господа, я не могу сделать хедер</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card">
                 <img src="./src/meme__img_2.png" alt="">
                 <div class="card__text">
