--- a/mems/index.html
+++ b/mems/index.html
@@ -20,12 +20,14 @@
                     </div>
                 </div>
             </a>
-            <div class="card">
-                <img src="./src/meme__img_2.png" alt="">
-                <div class="card__text">
-                    <p>Дамы и господа, я не могу сделать хедер</p>
+            <a href="./memCard.html">
+                <div class="card">
+                    <img src="./src/meme__img_2.png" alt="">
+                    <div class="card__text">
+                        <p>Дамы и господа, я не могу сделать хедер</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <div class="card">
                 <img src="./src/meme__img_3.png" alt="">
                 <div class="card__text">
