--- a/mems/memCard.html
+++ b/mems/memCard.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>О меме</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../mems/css/style.css" />
   </head>
   <body>
     <header class="header">
-      <h1 class="header__title">мемы - и точка.</h1>
+      <h1 class="header__title" onclick="window.location='./index.html'">мемы - и точка.</h1>
     </header>
     <main class="main">
       <section class="card-container">
         <article class="card-full">
-          <img src="../img/ironMan.jpg" alt="mem" class="card-full__img" />
+          <img src="../mems/img/ironMan.jpg" alt="mem" class="card-full__img" />
           <p class="card-full__about">Всё, что веселое, веселее</p>
           <section class="card-full__info card-info">
             <h2 class="card-info__title">Основано на меме «null»</h2>
