--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="./mems/css/style.css">
 </head>
 <body>
+	<p>додопицца</p>
 	<header class="header">
 		<h1 class="header__title">мемы - и точка.</h1>
 	</header>
