--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="button" id="button_search" value="поиск">
+    <input type="button" id="button_search" value="поиск"> 
     <input type="text" name="" id="text_field">
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
 </body>
 </html>
+
+<!-- card -->
