--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <header calss="header">
+        <p></p>
+    </header>
+    <div class="search">
     <input type="button" id="button_search" value="поиск">
     <input type="text" name="" id="text_field">
+</div>
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
 </body>
