--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -12,7 +12,7 @@
     </header>
     <div class="search">
     <input type="button" id="button_search" value="поиск">
-    <input type="text" name="" id="text_field">
+    <input type="text" name="" id="text_field" class="text_field">
 </div>
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
