--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -9,7 +9,10 @@
 <body>
     <input type="button" id="button_search" value="поиск">
     <input type="text" name="" id="text_field">
-    <div class="container__cards" id="container__cards"></div>
+
+	<main class="main">
+		<div class="container__cards" id="container__cards"></div>
+	</main>
     <script src="./script.js"></script>
 </body>
 </html>
