--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header calss="header">
+    <header class="header">
         <p></p>
     </header>
     <div class="search">
