Начальная надпись в пустом списке найденных фильмов

--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -11,7 +11,9 @@
     <input type="text" name="" id="text_field">
 
 	<main class="main">
-		<div class="container__cards" id="container__cards"></div>
+		<div class="container__cards" id="container__cards">
+			<h1 class="title">Список фильмов:</h1>
+		</div>
 	</main>
     <script src="./script.js"></script>
 </body>
