--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="button" id="button_search" value="поиск"> 
-    <input type="text" name="" id="text_field">
+    <header calss="header">
+        <p>КИНО</p>
+    </header>
+    <div class="search">
+    <input type="button" id="button_search" class="button_search" value="поиск">
+    <input type="text" name="" id="text_field" class="text_field">
+</div>
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
 </body>
 </html>
-
-<!-- card -->
