--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,14 +7,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <header calss="header">
-        <p>КИНО</p>
+    <header class="header">
+        <a class="name" href="index.html"><p>КИНО</p></a>
     </header>
+    <main class="main">
     <div class="search">
     <input type="button" id="button_search" class="button_search" value="поиск">
     <input type="text" name="" id="text_field" class="text_field">
 </div>
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
+</main>
+    <footer class="footer">
+        <a class="name" href="index.html"><p>КИНО</p></a>
+    </footer>
 </body>
 </html>
