--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -7,9 +7,54 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <input type="button" id="button_search" value="поиск">
-    <input type="text" name="" id="text_field">
+    <header>
+        <div class="base_header">
+            <div class="content_header">
+                <div class="logo_header">
+                <a href="https://www.kinopoisk.ru/?ysclid=loq04g1t82849276678&utm_referrer=yandex.ru">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Kinopoisk_colored_logo_%282021-present%29.svg">
+                    </a>
+                    <div class="search">
+                       <input class="button_search" type="button" id="button_search" value="Search">
+    <input class="text_field" type="text" name="" id="text_field">
+    </div>
+                </div>
+                <div class="socials_header">
+                    <ul class="navbar">
+                        <li class="item"> 💬 TG </li>
+                        <li class="item"> 😊 VK </li>
+                        <li class="item"> 📺 Youtube </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main> 
+      
     <div class="container__cards" id="container__cards"></div>
-    <script src="./script.js"></script>
+</main>
+<footer>
+    <div class="base_footer">
+        <div class="content_footer">
+            <div class="top-box">
+                <div class="logo_footer">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/c/c1/Kinopoisk_colored_logo_%282021-present%29.svg">
+                </div>
+                <div class="socials_footer">
+                    <ul class="navbar">
+                        <li class="item"> 💬 TG </li>
+                        <li class="item"> 😊 VK </li>
+                        <li class="item"> 📺 Youtube </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="frame">
+                <hr>
+                <p class="last_logo">Кинопоиск ® 2023</p>
+            </div>
+        </div>
+    </div>
+</footer>
+     <script src="./script.js"></script> 
 </body>
 </html>
