--- a/Вебинар_11/index.html
+++ b/Вебинар_11/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Movies</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <div class="search"> 
+
     <input type="button" id="button_search" value="поиск">
     <input type="text" name="" id="text_field">
+</div>
     <div class="container__cards" id="container__cards"></div>
     <script src="./script.js"></script>
 </body>
