--- a/Вебинар_12/Исходник/веб_3_12/index.html
+++ b/Вебинар_12/Исходник/веб_3_12/index.html
@@ -17,8 +17,8 @@
             class="card-full__img"
           />
           <article class="card-full__info">
-            <h2 class="card-full__title">The New Balance C-ms574</h2>
-            <h3 class="card-full__subtitle">Salehe Bembury Shark Skin</h3>
+            <h2 class="card-full__title">The fashion mens</h2>
+            <h3 class="card-full__subtitle">Arnold Schwarzenegger</h3>
             <section class="card-full__about">
               <article class="card-full__description">
                 <p class="card-full__text">
@@ -47,7 +47,7 @@
               </article>
               <article class="card-full__description">
                 <article class="card-full__info-data">
-                  <h4 class="card-full__title-medium">О кроссах</h4>
+                  <h4 class="card-full__title-medium">О меме</h4>
                 </article>
                 <article class="card-full__info-data">
                   <h6 class="card-full__title-small">Дата выхода</h6>
