--- a/Module II/Вебинар_3/yp-sneakers-pre/yp-sneakers/index.html
+++ b/Module II/Вебинар_3/yp-sneakers-pre/yp-sneakers/index.html
@@ -122,6 +122,6 @@
             </div>
         </footer>
     </main> 
-    <script src="../script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
