Тепер удаление по двойному клику

--- a/Module II/Вебинар_5/Пример №2/index.html
+++ b/Module II/Вебинар_5/Пример №2/index.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div id="wordsContainer"></div>
       
-        <div class="addWordForm">
+        <form class="addWordForm" id="wordForm">
           <input type="text" id="englishWordInput" placeholder="Слово на английском">
           <input type="text" id="russianWordInput" placeholder="Слово на русском">
-          <button id="addButton">Добавить слово</button>
-        </div>
+          <button type="submit" id="addButton">Добавить слово</button>
+        </form>
       </div>
     <script src="script.js"></script>
 </body>
