Автоподстановка значений в поля ввода модального окна

--- a/Module II/Вебинар_5/Пример №2/index.html
+++ b/Module II/Вебинар_5/Пример №2/index.html
@@ -22,11 +22,11 @@
 			<button type="button" id="modalClose" class="modal__close">X</button>
 			<div class="modal__input-container">
 				<label for="english">Слово на английском:</label>
-				<input type="text" name="english" class="modal__input">
+				<input type="text" name="english" id="modalInputEnglish" class="modal__input">
 			</div>
 			<div class="modal__input-container">
 				<label for="russian">Слово на русском:</label>
-				<input type="text" name="russian" class="modal__input">
+				<input type="text" name="russian" id="modalInputRussian" class="modal__input">
 			</div>
 			<button class="modal__button">Сохранить</button>
 		</div>
