--- a/Module II/Вебинар_5/Пример №2/index.html
+++ b/Module II/Вебинар_5/Пример №2/index.html
@@ -13,8 +13,8 @@
 		<div id="wordsContainer"></div>
 
 		<form class="addWordForm" id="wordForm">
-			<input type="text" id="englishWordInput" placeholder="Слово на английском" maxlength="25">
-			<input type="text" id="russianWordInput" placeholder="Слово на русском" maxlength="25">
+			<input type="text" id="englishWordInput" placeholder="Слово на английском" maxlength="25" required>
+			<input type="text" id="russianWordInput" placeholder="Слово на русском" maxlength="25" required>
 			<button type="submit" id="addButton">Добавить слово</button>
 		</form>
 
